Fix weird scrollbar issue with windows vs mac

--- a/styles/layout/_base.scss
+++ b/styles/layout/_base.scss
@@ -15,6 +15,7 @@ body {
 
 .main {
   overflow: scroll;
+  overflow-y: overlay;
   scroll-snap-type: y mandatory;
   scroll-padding-top: $navbar-height;
 
